##                                               -*- Autoconf -*-
## Process this file with autoconf to produce a configure script.
## ************************************************************************/
##        version number:    $LastChangedRevision$
##        created by:        Anar Manafov
##                           2007-03-25
##        last changed by:   $LastChangedBy$ $LastChangedDate$
##
##        Copyright (c) 2007 GSI GridTeam. All rights reserved.
## *************************************************************************/
AC_PREREQ(2.57)
AC_INIT

m4_include(custom_m4/debug.m4)
m4_include(custom_m4/xerces.m4)
m4_include(custom_m4/boost.m4)


# Geting HEADS's revision number
SVN_HEAD_REV=`svn info https://subversion.gsi.de/grid/D-Grid/PROOFAgent/trunk/PROOFAgent/ | grep "Revision: " | head -1 | awk -F: '{print $2}'`

# HACK: echo ${SVN_HEAD_REV}  is used to remove leading space
TMP_VER=`echo ${SVN_HEAD_REV}`

VER=["1.0.2."$TMP_VER]

AM_INIT_AUTOMAKE([proofagent], $VER)

AC_CONFIG_SRCDIR([configure.in])
AM_CONFIG_HEADER([config.h])


# WARNING: DON'T USE static linkage, becuase of:
# Using 'gethostbyaddr' in statically linked applications requires at runtime
# the shared libraries from the glibc version used for linking
# http://www.gnu.org/software/libc/FAQ.html#s-2.22
#LDFLAGS="-static $LDFLAGS"

## ----------------------------------------------------------------------
## --------------------------- >>> DEBUG/RELEASE Build <<< -----
## ----------------------------------------------------------------------
is_debug=no
AC_IS_DEBUG([], is_debug=yes, is_debug=no)

AC_LANG([C++])
AC_PROG_CXX

AC_PROG_INSTALL
## -----------------------------------------------------------------------
## ----------------------------- >>> XERCES <<<----------------------------
## -----------------------------------------------------------------------
AC_XERCES([])

LDFLAGS="$LDFLAGS"
LIBS="$LIBS $XERCESC_LIBS"
CPPFLAGS="$CPPFLAGS $XERCESC_CFLAGS"
## -----------------------------------------------------------------------
## ----------------------------- >>> BOOST <<<----------------------------
## -----------------------------------------------------------------------
have_boost=no
AC_BOOST([], have_boost=yes, have_boost=no)
AC_MSG_RESULT(["BOOST found $have_boost"])
if test "$have_boost" = "no"; then
  AC_MSG_ERROR([Cannot continue building])
fi

CPPFLAGS="$CPPFLAGS $BOOST_CFLAGS"
LDFLAGS="$LDFLAGS -L$BOOST_INSTALL_PATH/lib"
LIBS="$LIBS -lboost_thread -lboost_program_options"
## -----------------------------------------------------------------------
## -----------------------------------------------------------------------

AC_CONFIG_FILES([Doxyfile
Makefile
src/Makefile
src/unit_test/Makefile])
AC_OUTPUT
