##                                               -*- Autoconf -*-
## Process this file with autoconf to produce a configure script.
## ************************************************************************/
##        version number:    $LastChangedRevision$
##        created by:        Anar Manafov
##                           2007-03-25
##        last changed by:   $LastChangedBy$ $LastChangedDate$
##
##        Copyright (c) 2007 GSI GridTeam. All rights reserved.
## *************************************************************************/
AC_PREREQ(2.57)
AC_INIT

m4_include(custom_m4/debug.m4)
m4_include(custom_m4/xerces.m4)
m4_include(custom_m4/boost.m4)
m4_include(custom_m4/version.m4)

AC_VERSION(["https://subversion.gsi.de/dgrid/PROOFAgent/trunk/PROOFAgent/"],
           ["1.0.4"])

AM_INIT_AUTOMAKE([proofagent], $VERSION_REVISION)

AC_CONFIG_SRCDIR([configure.in])
AM_CONFIG_HEADER([config.h])


# WARNING: DON'T USE static linkage, becuase of:
# Using 'gethostbyaddr' in statically linked applications requires at runtime
# the shared libraries from the glibc version used for linking
# http://www.gnu.org/software/libc/FAQ.html#s-2.22
#LDFLAGS="-static $LDFLAGS"

## ----------------------------------------------------------------------
## --------------------------- >>> DEBUG/RELEASE Build <<< -----
## ----------------------------------------------------------------------
is_debug=no
AC_IS_DEBUG([], is_debug=yes, is_debug=no)

AC_LANG([C++])
AC_PROG_CXX

AC_PROG_INSTALL
## -----------------------------------------------------------------------
## ----------------------------- >>> XERCES <<<----------------------------
## -----------------------------------------------------------------------
AC_XERCES([])

LDFLAGS="$LDFLAGS"
LIBS="$LIBS $XERCESC_LIBS"
CPPFLAGS="$CPPFLAGS $XERCESC_CFLAGS"
## -----------------------------------------------------------------------
## ----------------------------- >>> BOOST <<<----------------------------
## -----------------------------------------------------------------------
#AT_BANNER([Boost headers])
BOOST_REQUIRE([])

#AT_BANNER([Boost libraries])
BOOST_PROGRAM_OPTIONS([])
LIBS="$LIBS $BOOST_PROGRAM_OPTIONS_LDFLAGS $BOOST_PROGRAM_OPTIONS_LIBS"

BOOST_THREADS([])
LIBS="$LIBS $BOOST_THREAD_LDFLAGS $BOOST_THREAD_LIBS"

CPPFLAGS="$CPPFLAGS $BOOST_CPPFLAGS"
## -----------------------------------------------------------------------
## -----------------------------------------------------------------------

AC_CONFIG_FILES([proofagent_env.sh
Doxyfile 
Makefile 
src/Makefile])
AC_OUTPUT
